# oidn

./: CMakeLists.txt
api/: CMakeLists.txt
common/: CMakeLists.txt
core/: CMakeLists.txt  module.cpp
devices/: CMakeLists.txt
devices/cpu/: CMakeLists.txt
devices/cuda/: CMakeLists.txt
devices/hip/: CMakeLists.txt
devices/metal/: CMakeLists.txt
devices/sycl/: CMakeLists.txt
